syntax = "proto3";

package tritontube;

option go_package = "internal/proto;proto";

service StorageService {
    rpc ReadFile(ReadFileRequest) returns (ReadFileResponse);
    rpc WriteFile(WriteFileRequest) returns (Empty);
    rpc DeleteFile(DeleteFileRequest) returns (Empty);
    rpc ListFiles(Empty) returns (ListFilesResponse);
}

message ReadFileRequest {
    string video_id = 1;
    string filename = 2;
}

message ReadFileResponse {
    bytes data = 1;
}

message WriteFileRequest {
    string video_id = 1;
    string filename = 2;
    bytes data = 3;
}

message DeleteFileRequest {
    string video_id = 1;
    string filename = 2;
}

message Empty {}

message ListFilesResponse {
    repeated string filenames = 1;
}